--- a/test/pages/community/subpage/subpage.wxss
+++ b/test/pages/community/subpage/subpage.wxss
@@ -112,15 +112,12 @@
     position: absolute;
     top:330rpx;
     left:30rpx;
+    font-size:30rpx;
   }
-  .lightbulb{
-    width:30rpx;
-    height:30rpx;
-  }
-  .comment{
-    width:30rpx;
-    height:30rpx;
-    margin-left:20rpx;
+  .numbers{
+    margin-left:10rpx;
+    margin-right:10rpx;
+    font-size: 30rpx;
   }
   .post-article{
     width:120rpx;
