--- a/test/pages/community/main/main.wxml
+++ b/test/pages/community/main/main.wxml
@@ -42,20 +42,20 @@
         <view class="username">{{item.username}}</view>
         <view class="date">{{item.date}}</view>
       </view>
-      <view class="main-content" bindtap="getActiveDetail" wx:if="{{item.image_url !== ''}}">
+      <view class="main-content" bindtap="getActiveDetail" data-active-id="{{item.active_id}}" wx:if="{{item.image_url !== ''}}">
         <view class="content-img-container">
           <image class="content-img" src="{{item.image_url}}"></image>
         </view>
         <view class="content-word">{{item.content}}</view>
       </view>
-      <view class="main-content" wx:else>
+      <view class="main-content" bindtap="getActiveDetail" data-active-id="{{item.active_id}}" wx:else>
         <view class="content-word2">{{item.content}}</view>
       </view>
       <view class = "etc">
-          <image class="lightbulb" src="../../../images/ring_focus.png"></image>
-          <text>{{item.light_number}}</text>
-          <image class="comment" src="../../../images/ring_focus.png"></image>
-          <text>{{item.comment_number}}</text>
+          <text class="cuIcon-creative"></text>
+          <text class="numbers">{{item.light_number}}</text>
+          <text class="cuIcon-mark"></text>
+          <text class="numbers">{{item.comment_number}}</text>
       </view>
     </view>
   </view>
