--- a/test/pages/community/subpage/subpage.wxss
+++ b/test/pages/community/subpage/subpage.wxss
@@ -93,6 +93,8 @@
     color:#888888;
     display: inline-block;
     width:450rpx;
+    height: 235rpx;
+    overflow: hidden;
     position: absolute;
     left:230rpx;
     top:20rpx;
@@ -101,6 +103,8 @@
     font-size:28rpx;
     color: #888888;
     width:670rpx;
+    height: 235rpx;
+    overflow: hidden;
     position: absolute;
     left:30rpx;
     top:20rpx;
