--- a/test/pages/community/postActive/postActive.wxml
+++ b/test/pages/community/postActive/postActive.wxml
@@ -9,7 +9,7 @@
     <view class="tag-container">
         <view class="tag-title">选择标签</view>
         <view class="tag-holder">
-            <view class="tag-box" wx:for="{{tag_list}}">
+            <view class="tag-box" wx:for="{{tag_list}}" id="{{item.id}}" style="color:{{item.color}};border-color:{{item.color}}" bindtap="chosenTag">
                 {{item.name}}
             </view>
         </view>
