--- a/test/pages/me/collection/collection.wxss
+++ b/test/pages/me/collection/collection.wxss
@@ -1,6 +1,5 @@
-.page{
-    width:100%;
-    height:100%;
+page{
+    background-color: #f3fbfb;
 }
 .container{
     background-color: #f3fbfb;
@@ -139,6 +138,7 @@
     margin-top:28rpx;
     font-size: 28rpx;
     color:#b2b2b2;
+    text-align: center;
 }
 /*deal with empty style*/
 .empty{
