--- a/test/pages/community/main/main.wxss
+++ b/test/pages/community/main/main.wxss
@@ -1,198 +1,235 @@
 /* pages/community/community.wxss */
-.container{
-  background-color:#f3fbfb;
+
+page {
+  background-color: #f3fbfb;
 }
-.search-bar-container{
-  background-color:white;
-  width:100%;
+.mymargin
+{
+  margin:0rpx 23rpx;
+}
+.container {
+  background-color: #f3fbfb;
+}
+
+.search-bar-container {
+  background-color: white;
+  width: 100%;
   height: 100rpx;
-  position:fixed;
-  z-index:1
+  position: fixed;
+  z-index: 1;
 }
-.search-bar{
-  background-color:#f2f2f2;
-  width:700rpx;
+
+.search-bar {
+  background-color: #f2f2f2;
+  width: 700rpx;
   height: 80rpx;
   border-radius: 32px;
   text-align: center;
   line-height: 80rpx;
-  position:fixed;
-  top:10rpx;
-  left:23rpx;
+  position: fixed;
+  top: 10rpx;
+  left: 23rpx;
 }
-.modules{
+
+.modules {
   position: relative;
   background-color: white;
-  width:700rpx;
-  height:250rpx;
+  width: 700rpx;
+  height: 250rpx;
   border-radius: 16rpx;
-  margin-top:20rpx;
-  top:100rpx;
-  box-shadow: 5rpx 5rpx 5rpx rgb(170,170,170,0.2);
+  margin-top: 20rpx;
+  top: 100rpx;
+  box-shadow: 5rpx 5rpx 5rpx rgb(170, 170, 170, 0.2);
 }
-.modules-title{
-  font-size:36rpx;
-  color:#353535;
+
+.modules-title {
+  font-size: 36rpx;
+  color: #353535;
   font-weight: bold;
   position: absolute;
-  top:15rpx;
-  left:28rpx;
+  top: 15rpx;
+  left: 28rpx;
 }
-.scroll-bar{
+
+.scroll-bar {
   position: relative;
-  width:700rpx;
+  width: 700rpx;
   height: 250rpx;
 }
-.modules-item{
+
+.modules-item {
   display: inline-block;
-  background-color:white;
-  width:160rpx;
+  background-color: white;
+  width: 160rpx;
   height: 120rpx;
   position: absolute;
-  top:60rpx;
-  margin:20rpx 10rpx 20rpx 10rpx;
+  top: 60rpx;
+  margin: 20rpx 10rpx 20rpx 10rpx;
 }
-.modules-img{
+
+.modules-img {
   display: inline-block;
   width: 160rpx;
-  height:120rpx;
+  height: 120rpx;
   border-radius: 32rpx;
 }
-.modules-text{
-  font-size:26rpx;
+
+.modules-text {
+  font-size: 26rpx;
   text-align: center;
-  color:#888888;
+  color: #888;
 }
-.cards-content{
+
+.cards-content {
   position: relative;
-  width:710rpx;
-  margin-top:20rpx;
-  top:100rpx;
+  width: 710rpx;
+  margin-top: 20rpx;
+  top: 100rpx;
 }
-.card-box{
+
+.card-box {
   position: relative;
-  width:100%;
-  height:380rpx;
+  width: 100%;
+  height: 380rpx;
   background-color: white;
   border-radius: 32rpx;
   margin-bottom: 20rpx;
-  box-shadow: 5rpx 5rpx 5rpx rgb(170,170,170,0.2);
+  box-shadow: 5rpx 5rpx 5rpx rgb(170, 170, 170, 0.2);
 }
-.card-info{
-  width:100%;
+
+.card-info {
+  width: 100%;
   height: 110rpx;
   position: relative;
   border-bottom: 2rpx dotted #e5e5e5;
 }
-.avartar{
-  width:60rpx;
-  height:60rpx;
+
+.avartar {
+  width: 60rpx;
+  height: 60rpx;
   border-radius: 50%;
   position: absolute;
-  top:28rpx;
-  left:28rpx;
+  top: 28rpx;
+  left: 28rpx;
 }
-.username{
-  font-size:24rpx;
-  color: #888888;
+
+.username {
+  font-size: 24rpx;
+  color: #888;
   position: absolute;
-  top:28rpx;
-  left:100rpx;
+  top: 28rpx;
+  left: 100rpx;
 }
-.date{
-  font-size:22rpx;
-  color:#b2b2b2;
+
+.date {
+  font-size: 22rpx;
+  color: #b2b2b2;
   position: absolute;
-  top:60rpx;
-  left:100rpx;
+  top: 60rpx;
+  left: 100rpx;
 }
-.main-content{
+
+.main-content {
   position: relative;
   width: 100%;
   height: 240rpx;
 }
-.content-img-container{
-  width:180rpx;
-  height:180rpx;
+
+.content-img-container {
+  width: 180rpx;
+  height: 180rpx;
   position: relative;
-  top:20rpx;
-  left:20rpx;
+  top: 20rpx;
+  left: 20rpx;
   display: inline-block;
 }
-.content-img{
-  width:180rpx;
-  height:180rpx;
+
+.content-img {
+  width: 180rpx;
+  height: 180rpx;
 }
-.content-word{
-  font-size:28rpx;
-  color:#888888;
+
+.content-word {
+  font-size: 28rpx;
+  color: #888;
   display: inline-block;
-  width:450rpx;
+  width: 450rpx;
+  height: 220rpx;
+  overflow: hidden;
+  position: absolute;
+  left: 230rpx;
+  top: 20rpx;
+}
+
+.content-word2 {
+  font-size: 28rpx;
+  color: #888;
+  width: 670rpx;
   height: 235rpx;
   overflow: hidden;
   position: absolute;
-  left:230rpx;
-  top:20rpx;
+  left: 30rpx;
+  top: 20rpx;
 }
-.content-word2{
-  font-size:28rpx;
-  color: #888888;
-  width:670rpx;
-  height: 235rpx;
-  overflow: hidden;
+
+.etc {
+  width: 200rpx;
+  height: 30rpx;
+  color: #b2b2b2;
   position: absolute;
-  left:30rpx;
-  top:20rpx;
-}
-.etc{
-  width:200rpx;
-  height:30rpx;
-  color:#b2b2b2;
-  position: absolute;
-  top:330rpx;
-  left:30rpx;
-  font-size:30rpx;
-}
-.numbers{
-  margin-left:10rpx;
-  margin-right:10rpx;
+  top: 330rpx;
+  left: 30rpx;
   font-size: 30rpx;
 }
-.post-article{
-  width:120rpx;
-  height:120rpx;
+
+.numbers {
+  margin-left: 10rpx;
+  margin-right: 10rpx;
+  font-size: 30rpx;
+}
+
+.post-article {
+  width: 120rpx;
+  height: 120rpx;
   border-radius: 50%;
-  position:fixed;
-  right:50rpx;
-  bottom:30rpx;
-  box-shadow: 2 2 2 rgb(170,170,170,0.2);
+  position: fixed;
+  right: 50rpx;
+  bottom: 30rpx;
+  box-shadow: 2 2 2 rgb(170, 170, 170, 0.2);
 }
-.post-pen{
-  width:120rpx;
-  height:120rpx;
+
+.post-pen {
+  width: 120rpx;
+  height: 120rpx;
   border-radius: 50%;
 }
-#one{
+
+#one {
   position: absolute;
-  left:20rpx;
+  left: 20rpx;
 }
-#two{
+
+#two {
   position: absolute;
-  left:200rpx;
+  left: 200rpx;
 }
-#three{
+
+#three {
   position: absolute;
-  left:380rpx;
+  left: 380rpx;
 }
-#four{
+
+#four {
   position: absolute;
   left: 560rpx;
 }
-#five{
+
+#five {
   position: absolute;
-  left:740rpx;
+  left: 740rpx;
 }
-#six{
+
+#six {
   position: absolute;
-  left:920rpx;
+  left: 920rpx;
 }
