--- a/test/pages/community/postActive/postActive.wxss
+++ b/test/pages/community/postActive/postActive.wxss
@@ -1,113 +1,159 @@
 /* pages/community/postActive.wxss */
-page{
-    background-color: #f3fbfb;
+
+page {
+  background-color: #f3fbfb;
 }
-.container{
-    background-color: #f3fbfb;
-    width:100%;
+
+.container {
+  background-color: #f3fbfb;
+  width: 100%;
 }
+
 .post-container {
-    width:690rpx;
-    height: 500rpx;
-    border-radius: 32rpx;
-    box-shadow: 0rpx 2rpx 4rpx rgb(229,229,229,0.35);
-    margin:20rpx auto 20rpx auto;
+  width: 690rpx;
+  height: 500rpx;
+  border-radius: 32rpx;
+  box-shadow: 0rpx 2rpx 4rpx rgb(229, 229, 229, 0.35);
+  margin: 20rpx auto 20rpx auto;
 }
-.post-input{
-    width:690rpx;
-    height: 500rpx;
-    border-radius: 32rpx;
-    background-color: white;
-    font-size: 28rpx;
-    color:#b2b2b2;
-    padding:20rpx;
+
+.post-input {
+  width: 690rpx;
+  height: 500rpx;
+  border-radius: 32rpx;
+  background-color: white;
+  font-size: 28rpx;
+  color: #b2b2b2;
+  padding: 20rpx;
 }
-.tag-container{
-    background-color: white;
-    position: relative;
-    width:690rpx;
-    height:220rpx;
-    border-radius: 32rpx;
-    box-shadow: 0rpx 2rpx 4rpx rgb(229,229,229,0.35);
-    margin:20rpx auto 20rpx auto;
+
+.tag-container {
+  background-color: white;
+  position: relative;
+  width: 690rpx;
+  height: 220rpx;
+  border-radius: 32rpx;
+  box-shadow: 0rpx 2rpx 4rpx rgb(229, 229, 229, 0.35);
+  margin: 20rpx auto 20rpx auto;
 }
-.tag-title{
-    font: 36rpx bold;
-    color:#66cccc;
-    position: relative;
-    left:20rpx;
-    top:20rpx;
+
+.tag-title {
+  font: 36rpx bold;
+  color: #6cc;
+  position: relative;
+  left: 20rpx;
+  top: 20rpx;
 }
-.tag-holder{
-    position: relative;
-    top:10rpx;
+
+.tag-holder {
+  position: relative;
+  top: 10rpx;
 }
-.tag-box{
-    width:150rpx;
-    height:60rpx;
-    font-size:24rpx;
-    color:#b2b2b2;
-    border: solid #b2b2b2 2rpx;
-    border-radius: 32rpx;
-    margin:10rpx 10rpx 10rpx 10rpx;
-    display: inline-block;
-    line-height: 60rpx;
-    text-align: center;
+
+.tag-box {
+  width: 150rpx;
+  height: 60rpx;
+  font-size: 24rpx;
+  color: #b2b2b2;
+  border: solid #b2b2b2 2rpx;
+  border-radius: 32rpx;
+  margin: 10rpx 10rpx 10rpx 10rpx;
+  display: inline-block;
+  line-height: 60rpx;
+  text-align: center;
 }
-.alter-container{
-    background-color: white;
-    width:690rpx;
-    height: 100rpx;
-    border-radius: 32rpx;
-    box-shadow: 0rpx 2rpx 4rpx rgb(229,229,229,0.35);
-    position: relative;
-    margin:10rpx auto 20rpx auto;
+
+.alter-container {
+  background-color: white;
+  width: 690rpx;
+  height: 100rpx;
+  border-radius: 32rpx;
+  box-shadow: 0rpx 2rpx 4rpx rgb(229, 229, 229, 0.35);
+  position: relative;
+  margin: 10rpx auto 20rpx auto;
 }
-.alter-title{
-    display: inline-block;
-    font:36rpx bold;
-    color: #66cccc;
-    margin:25rpx 0rpx auto 20rpx;
+
+.alter-title {
+  display: inline-block;
+  font: 36rpx bold;
+  color: #6cc;
+  margin: 25rpx 0rpx auto 20rpx;
 }
-.show-alter{
-    display: inline-block;
-    font-size:20rpx;
-    color: #66cccc;
-    position: relative;
-    margin:auto 0rpx auto 400rpx;
+
+.show-alter {
+  display: inline-block;
+  font-size: 20rpx;
+  color: #6cc;
+  position: relative;
+  margin: auto 0rpx auto 400rpx;
 }
-.alter-switch{
-    display: inline-block;
-    position: relative;
-    left:20rpx;
+
+.alter-switch {
+  display: inline-block;
+  position: relative;
+  left: 20rpx;
 }
-.button-container{
-    width:690rpx;
-    height: 80rpx;
-    position: fixed;
-    bottom:30rpx;
-    margin-left:auto;
-    margin-right: auto;
+
+.button-container {
+  width: 690rpx;
+  height: 80rpx;
+  position: fixed;
+  bottom: 30rpx;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
 }
-.button-cancel{
-    display: inline-block;
-    font-size:36rpx;
-    color: #66cccc;
-    position: relative;
-    top:10rpx;
-    left:20rpx;
+
+.button-cancel {
+  display: inline-block;
+  font-size: 36rpx;
+  color: #6cc;
+  position: relative;
+  top: 10rpx;
+  left: 20rpx;
 }
-.button-post{
-    display: inline-block;
-    position: relative;
-    left:60rpx;
-    border-radius: 40rpx;
-    width:560rpx;
-    height:80rpx;
-    font-size:36rpx;
-    color: #ffffff;
-    background-image: linear-gradient(to top right,#66cccc,#c5f3d8);
-    text-align: center;
-    line-height: 80rpx;
-    box-shadow: 0rpx 0rpx 15rpx rgb(102,102,204,0.35);
+
+.button-post {
+  display: inline-block;
+  position: relative;
+  left: 40rpx;
+  border-radius: 40rpx;
+  width: 560rpx;
+  height: 80rpx;
+  font-size: 36rpx;
+  color: #fff;
+  background-image: linear-gradient(to top right, #6cc, #c5f3d8);
+  text-align: center;
+  /* line-height: 80rpx; */
+  box-shadow: 0rpx 0rpx 15rpx rgb(102, 102, 204, 0.35);
 }
+.Image-chooser{
+  width:50rpx;
+  height: 50rpx;
+  position: relative;
+  left:200rpx;
+  color: #6cc;
+}
+.Image-container{
+  width:690rpx;
+  height: 200rpx;
+  background-color: white;
+  border-radius: 32rpx;
+  margin:20rpx auto 20rpx auto;
+}
+.Image-chosen{
+  width:150rpx;
+  height:150rpx;
+  display: inline-block;
+}
+.image-looper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+/* button: not([size='mini']) {
+  user: 40px;
+  width: 184px;
+  margin-left: auto;
+  margin-right: auto;
+} */
