--- a/test/pages/test/testDetail/testDetail.wxml
+++ b/test/pages/test/testDetail/testDetail.wxml
@@ -1,5 +1,5 @@
 <!--pages/test/testDetail/testDetail.wxml-->
-<view class="welcomeRoom padding-top-xl" hidden="{{welcomeFlag}}">
+<scroll-view scroll-y class="welcomeRoom padding-top-xl" hidden="{{welcomeFlag}}">
   <view class="imgRoom">
     <image class="testImg" src="{{img}}"></image>
   </view>
@@ -20,24 +20,26 @@
       <view class="min">min</view>
     </view>
   </view>
-  <view class="bottom">
-    <view class="collect">
-      <text class="cuIcon-favor text-mint"></text>
-      <text class="collectTxt">收藏</text>
-    </view>
-    <view class="start" catchtap="startClick" wx:if="{{!haveDone}}">开始测试</view>
-    <view class="flex" wx:else>
-      <view class="round re restart" catchtap="startClick">重新测试</view>
-      <view class=" re start" catchtap="showRes">查看报告</view>
-    </view>
+</scroll-view>
+
+<view class="bottom" hidden="{{welcomeFlag}}">
+  <view class="collect">
+    <text class="cuIcon-favor text-mint"></text>
+    <text class="collectTxt">收藏</text>
+  </view>
+  <view class="start" catchtap="startClick" wx:if="{{!haveDone}}">开始测试</view>
+  <view class="flex" wx:else>
+    <view class="round re restart" catchtap="startClick">重新测试</view>
+    <view class=" re start" catchtap="showRes">查看报告</view>
   </view>
 </view>
+
 <view class="questionRoom" hidden="{{questionFlag}}">
   <view class="qIndex">
     <view class="num">{{qCur+1}}/</view>
     <view class="num">{{qNum}}</view>
   </view>
-  <view class="testName margin-bottom-xl">{{questionList[qCur].question}}</view>
+  <view class="testName margin-bottom-xl margin-lr-lg">{{questionList[qCur].question}}</view>
 
   <!-- 滑块类型 -->
   <view class="dotChoice" wx:if="{{questionList[qCur].type=='dot'}}">
