--- a/test/pages/me/main/main.wxml
+++ b/test/pages/me/main/main.wxml
@@ -24,7 +24,7 @@
     <text id="time-detail">{{test_time}}</text>
     <image class="graph" src = "../../../images/psycho_view.png"></image>
     <text id="record-origin">结果根据每周一测（xxx测试）生成</text>
-    <view class = "view-all-record">查看完整档案</view>
+    <view class = "view-all-record" bindtap="getPsychoFile">查看完整档案</view>
   </view>
 
   <view class = "my-function">
